# derive-name

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
