[package]
name = "derive-name"
version = "0.1.1"
edition = "2021"
authors = ["Christoph Schneider <christoph.schneider@abineo.com>"]
description = "Derive macros for derive-name crate."
license = "ISC"
repository = "https://github.com/abineo-ag/derive-name"
exclude = ["target", ".github"]

[dependencies]
derive-name-macros = "0.1.0"
