[package]
name = "derive-name"
version = "1.1.0"
edition = "2021"
authors = ["Christoph Schneider <christoph.schneider@abineo.com>"]
description = "Derive macro to get the name of a struct, enum or enum variant"
license = "ISC"
repository = "https://github.com/abineo-ag/derive-name"
exclude = ["target", ".github"]

[dependencies]
derive-name-macros = "1"
