[package]
name = "derive-name-macros"
version = "0.1.1"
edition = "2021"
authors = ["Christoph Schneider <christoph.schneider@abineo.com>"]
description = "Derive macros for derive-name crate."
license = "ISC"
repository = "https://github.com/abineo-ag/derive-name"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
