[package]
name = "derive-name-macros"
version = "1.1.0"
edition = "2021"
authors = ["Christoph Schneider <christoph.schneider@abineo.com>"]
description = "Derive macros for derive-name crate."
license = "ISC"
repository = "https://github.com/abineo-ag/derive-name"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
